Доставка ФЗ5. Обновление 10/07/2025